<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/filter_button_date"
        android:title="Filtre par Date"
        android:contentDescription="Date"
        />

    <item
        android:id="@+id/filter_button_location"
        android:title="Filtre par Salle"
        android:contentDescription="Salle"
        />

</menu>